# backend/app/api/handlers/v1/controller.go
@@ -95,6 +95,7 @@ type (
 		Demo              bool            `json:"demo"`
 		AllowRegistration bool            `json:"allowRegistration"`
 		LabelPrinting     bool            `json:"labelPrinting"`
+		ProductLookup     bool            `json:"productLookup"`
 	}
 )
 
@@ -132,6 +133,7 @@ func (ctrl *V1Controller) HandleBase(ready ReadyFunc, build Build) errchain.Hand
 			Demo:              ctrl.isDemo,
 			AllowRegistration: ctrl.allowRegistration,
 			LabelPrinting:     ctrl.config.LabelMaker.PrintCommand != nil,
+			ProductLookup:     ctrl.svc.ProductLookup.Enabled(),
 		})
 	}
 }
