# backend/app/api/main.go
@@ -255,6 +255,7 @@ func run(cfg *config.Config) error {
 		app.repos,
 		services.WithAutoIncrementAssetID(cfg.Options.AutoIncrementAssetID),
 		services.WithCurrencies(currencies),
+		services.WithProductLookup(cfg.Options.ProductLookup),
 	)
 
 	// =========================================================================
